--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -1,9 +1,28 @@
+/* CSS reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 
 /* tab pane styling */
 div.panes > div {
     display:none;       
-    padding:15px 10px;
-    border:1px solid #999;
+    padding:10px 10px;
+    /*border:1px solid #999;*/
     border-top:0;
     font-size:14px;
     background-color:#fff;
@@ -13,27 +32,27 @@ ul.tabs {
 }
 
 body {
-    margin: 0;
-    padding: 0;
     background-color: #EEEEEE;
+    height:100%;
 }
 
-#wrapper{
+#wrapper {
     width:1000px;
+    background-color: white;
+    border: 0;
+    font-size: .8em;
 }
 
 #banner {
     padding-left: 5px;
     padding-right: 5px;
     position: relative;
-    background-color: white;
 }
 
 #main {
     padding-left: 5px;
     padding-right: 5px;
     margin-right:155px;
-    background-color: white;
 }
 
 #logout {
@@ -46,11 +65,10 @@ body {
     padding-right: 5px;
     float: right;
     width: 150px;
-    background-color: white;
 }
 
 #footer {
-    
+    height:20px;
 }
 
 #grabDateForm {
