Moved data retrieval code into DataSource.  This greatly simplifies the code in viz.jsp and allows us to abstract data tweaking and mushing away into DataSource.

--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -44,8 +44,8 @@ body {
 }
 
 #banner {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     position: relative;
 }
 
