--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -312,13 +312,17 @@ body {
 #ViewUpload div.graphsEnabled {
     background-image: url('/css/images/up_arrow.png');
 }
-#ViewUpload div.disabled {
-    background-image: url('/css/images/redx.png');
-}
 
 #ViewUpload div.GraphEnableButton:hover {
 	background-color: darkgrey;
 }
+
+/* !important backgroun-color to override the hover */
+#ViewUpload div.disabled {
+    background-image: none;
+    background-color: lightgrey !important;
+}
+
 
 #ViewUpload .ProtoGraph {
 	margin-top: -1px;
